--- a/LearningWebApi/LearningWebApi/LearningWebApi.csproj
+++ b/LearningWebApi/LearningWebApi/LearningWebApi.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Core.Model\Core.Model.csproj" />
+  </ItemGroup>
+
 </Project>
