--- a/LearningWebApi/LearningWebApi/appsettings.json
+++ b/LearningWebApi/LearningWebApi/appsettings.json
@@ -1,8 +1,28 @@
 {
+  "AllowedHosts": "*",
+  //用户配置信息
+  "AppSettings": {
+    //Redis缓存
+    "RedisCaching": {
+      "Enabled": true,
+      "ConnectionString": "127.0.0.1:6319"
+    },
+    //数据库配置
+    "SqlServer": {
+      "SqlServerConnection": "Server=.;Database=WMBlogDB;User ID=sa;Password=123;",
+      "ProviderName": "System.Data.SqlClient"
+    },
+    "Date": "2018-08-28",
+    "Author": "Learning.Core"
+  },
+  "Audience": {
+    "Secret": "sdfsdfsrty45634kkhllghtdgdfss345t678fs",
+    "Issuer": "Learning.Core",
+    "Audience": "wr"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
