--- a/LearningWebApi/LearningRedisApi/LearningRedisApi.csproj
+++ b/LearningWebApi/LearningRedisApi/LearningRedisApi.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="StackExchange.Redis" Version="2.0.519" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Models\Models.csproj" />
+  </ItemGroup>
+
 </Project>
