--- a/LearningHard/Test/Test.csproj
+++ b/LearningHard/Test/Test.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="WebApiClient.AOT" Version="0.3.3" />
+  </ItemGroup>
+
 </Project>
