--- a/LearningHard/WebApiClient/packages.config
+++ b/LearningHard/WebApiClient/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Microsoft.Extensions.Logging.Abstractions" version="1.0.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
+  <package id="RestSharp" version="106.6.9" targetFramework="net461" />
   <package id="System.Collections" version="4.0.11" targetFramework="net461" />
   <package id="System.Collections.Concurrent" version="4.0.12" targetFramework="net461" />
   <package id="System.Diagnostics.Debug" version="4.0.11" targetFramework="net461" />
