--- a/WebApi/WebApi/Repository/Repository.csproj
+++ b/WebApi/WebApi/Repository/Repository.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="sqlSugarCore" Version="4.9.9.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\IRepository\IRepository.csproj" />
+  </ItemGroup>
+
 </Project>
