--- a/WebApi/WebApi/WebApi/appsettings.json
+++ b/WebApi/WebApi/WebApi/appsettings.json
@@ -11,5 +11,17 @@
         "Default": "Warning"
       }
     }
+  },
+  "AllowedHosts": "*",
+  "AppSettings": {
+    "SqlServer": {
+      "SqlServerConnection": "Server=198.211.10.219;Port=3506;User Id=root;Password=Pass1234;Database=course;", //请注意要把当前appsetting.json 文件->右键->属性->复制到输出目录->始终复制
+      "ProviderName": "MySql.Data.MySqlClient"
+    }
+  },
+  "Audience": {
+    "Secret": "sdfsdfsrty45634kkhllghtdgdfss345t678fs",
+    "Issuer": "Blog.Core",
+    "Audience": "wr"
   }
 }
