--- a/WebApi/WebApi/Repository/Repository.csproj
+++ b/WebApi/WebApi/Repository/Repository.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <OutputPath>..\WebApi\bin\Debug\</OutputPath>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="sqlSugarCore" Version="4.9.9.3" />
   </ItemGroup>
