--- a/WebApi/WebApi/WebApi/appsettings.json
+++ b/WebApi/WebApi/WebApi/appsettings.json
@@ -21,7 +21,7 @@
   },
   "Audience": {
     "Secret": "sdfsdfsrty45634kkhllghtdgdfss345t678fs",
-    "Issuer": "Blog.Core",
+    "Issuer": "WebApi",
     "Audience": "wr"
   }
 }
