--- a/WebApi/WebApi/WebApi/appsettings.json
+++ b/WebApi/WebApi/WebApi/appsettings.json
@@ -14,8 +14,14 @@
   },
   "AllowedHosts": "*",
   "AppSettings": {
+    //Redis缓存
+    "RedisCaching": {
+      "Enabled": true,
+      "ConnectionString": "127.0.0.1:6379"
+    },
     "SqlServer": {
-      "SqlServerConnection": "Server=198.211.10.219;Port=3506;User Id=root;Password=Pass1234;Database=course;", //请注意要把当前appsetting.json 文件->右键->属性->复制到输出目录->始终复制
+      //请注意要把当前appsetting.json 文件->右键->属性->复制到输出目录->始终复制
+      "SqlServerConnection": "Server=198.211.10.219;Port=3506;User Id=root;Password=Pass1234;Database=course;",
       "ProviderName": "MySql.Data.MySqlClient"
     }
   },
