--- a/WebApi/WebApi/WebApi/appsettings.json
+++ b/WebApi/WebApi/WebApi/appsettings.json
@@ -21,7 +21,7 @@
     },
     "SqlServer": {
       //请注意要把当前appsetting.json 文件->右键->属性->复制到输出目录->始终复制
-      "SqlServerConnection": "Server=198.211.10.219;Port=3506;User Id=root;Password=Pass1234;Database=course;",
+      "SqlServerConnection": "",
       "ProviderName": "MySql.Data.MySqlClient"
     }
   },
