--- a/IdentityServer/QuickstartIdentityServer/Client/Client.csproj
+++ b/IdentityServer/QuickstartIdentityServer/Client/Client.csproj
@@ -3,6 +3,11 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.2</TargetFramework>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="IdentityModel" Version="3.10.10" />
+  </ItemGroup>
 
 </Project>
