--- a/LearningHard/AutofacDemo/AutofacDemo.csproj
+++ b/LearningHard/AutofacDemo/AutofacDemo.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Autofac" Version="4.9.2" />
+  </ItemGroup>
+
 </Project>
