feat:新型号名关系构建

--- a/LearningHard/Test2/Test2.csproj
+++ b/LearningHard/Test2/Test2.csproj
@@ -6,6 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EasyOffice" Version="1.1.3" />
+    <PackageReference Include="Microsoft.VisualBasic" Version="10.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\WPFdll\WPFdll.csproj" />
   </ItemGroup>
 
