--- a/LearningHard/Test/Test.csproj
+++ b/LearningHard/Test/Test.csproj
@@ -10,4 +10,10 @@
     <PackageReference Include="WebApiClient.AOT" Version="0.3.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="PresentationFramework">
+      <HintPath>C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.5.2\PresentationFramework.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
