--- a/LearningHard/HelloWorldWorkflow/HelloWorldWorkflow.csproj
+++ b/LearningHard/HelloWorldWorkflow/HelloWorldWorkflow.csproj
@@ -5,4 +5,10 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
+    <PackageReference Include="System.ComponentModel" Version="4.3.0" />
+    <PackageReference Include="WorkflowCore" Version="2.0.0" />
+  </ItemGroup>
+
 </Project>
