--- a/LearningHard/ExcelCoreTest/ExcelCoreTest.csproj
+++ b/LearningHard/ExcelCoreTest/ExcelCoreTest.csproj
@@ -9,4 +9,10 @@
     <PackageReference Include="DotNetCore.NPOI" Version="1.2.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="System.Web">
+      <HintPath>C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.6.1\System.Web.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
