--- a/Grpc/AspNetCoreGrpcClient/AspNetCoreGrpcClient.csproj
+++ b/Grpc/AspNetCoreGrpcClient/AspNetCoreGrpcClient.csproj
@@ -13,9 +13,10 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
   </ItemGroup>
-
   <ItemGroup>
-    <ProjectReference Include="..\AspNetCoregRpcService\AspNetCoregRpcService.csproj" />
+    <Protobuf Include="Protos\greet.proto" GrpcServices="Client" />
   </ItemGroup>
+
+  
 
 </Project>
