grpc:建立客户端双向流访问

--- a/Grpc/AspNetCoreGrpcClient/AspNetCoreGrpcClient.csproj
+++ b/Grpc/AspNetCoreGrpcClient/AspNetCoreGrpcClient.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Protos\LuCat.proto" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Google.Protobuf" Version="3.9.1" />
     <PackageReference Include="Grpc.Net.Client" Version="2.23.2" />
     <PackageReference Include="Grpc.Tools" Version="2.23.0">
@@ -14,8 +18,8 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <Protobuf Include="Protos\greet.proto" />
-    <Protobuf Include="Protos\LuCat.proto" />
+    <Protobuf Include="Protos\greet.proto" GrpcServices="Client" />
+    <Protobuf Include="Protos\LuCat.proto" GrpcServices="Client" />
   </ItemGroup>
   
 
