学习笔记:添加K8S学习笔记

--- a/DockerApi/DockerServiceApi/DockerServiceApi/DockerServiceApi.csproj
+++ b/DockerApi/DockerServiceApi/DockerServiceApi/DockerServiceApi.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Docker.DotNet" Version="3.125.2" />
+    <PackageReference Include="Ductus.FluentDocker" Version="2.7.2" />
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.8.1" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
