feat:添加kubernetes-dashboard.yaml文件

--- a/LearningHard/WpfApp1/WpfApp1.csproj
+++ b/LearningHard/WpfApp1/WpfApp1.csproj
@@ -56,32 +56,15 @@
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
+    <Reference Include="WpfAnimatedGif, Version=1.4.18.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\WpfAnimatedGif.1.4.18\lib\net\WpfAnimatedGif.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="Domain\DocumentationLinks.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Domain\Sample4Dialog.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Domain\SampleDialog.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Domain\SampleMessageDialog.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Domain\SampleProgressDialog.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -90,38 +73,6 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Domain\AnotherCommandImplementation.cs" />
-    <Compile Include="Domain\DemoItem.cs" />
-    <Compile Include="Domain\DialogsViewModel.cs" />
-    <Compile Include="Domain\DocumentationLink.cs" />
-    <Compile Include="Domain\DocumentationLinks.xaml.cs">
-      <DependentUpon>DocumentationLinks.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Domain\DocumentationLinkType.cs" />
-    <Compile Include="Domain\FutureDateValidationRule.cs" />
-    <Compile Include="Domain\IsCheckedValidationRule.cs" />
-    <Compile Include="Domain\ListsAndGridsViewModel.cs" />
-    <Compile Include="Domain\MainWindowViewModel.cs" />
-    <Compile Include="Domain\NotEmptyValidationRule.cs" />
-    <Compile Include="Domain\NotifyPropertyChangedExtension.cs" />
-    <Compile Include="Domain\Sample4Dialog.xaml.cs">
-      <DependentUpon>Sample4Dialog.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Domain\SampleDialog.xaml.cs">
-      <DependentUpon>SampleDialog.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Domain\SampleDialogViewModel.cs" />
-    <Compile Include="Domain\SampleMessageDialog.xaml.cs">
-      <DependentUpon>SampleMessageDialog.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Domain\SampleProgressDialog.xaml.cs">
-      <DependentUpon>SampleProgressDialog.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Domain\SelectableViewModel.cs" />
-    <Compile Include="Domain\SimpleDataTemplateSelector.cs" />
-    <Compile Include="Domain\SimpleDateValidationRule.cs" />
-    <Compile Include="Domain\TextFieldsViewModel.cs" />
-    <Compile Include="Domain\TreesViewModel.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -153,6 +104,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="img\status1.gif" />
+    <Resource Include="img\status2.gif" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
