--- a/LearningHard/WpfApp1/packages.config
+++ b/LearningHard/WpfApp1/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="MaterialDesignColors" version="1.2.0" targetFramework="net461" />
   <package id="MaterialDesignThemes" version="2.6.0" targetFramework="net461" />
+  <package id="WpfAnimatedGif" version="1.4.18" targetFramework="net461" />
 </packages>
