--- a/src/IdentityServer/QuickstartidentityServer/QuickstartidentityServer.csproj
+++ b/src/IdentityServer/QuickstartidentityServer/QuickstartidentityServer.csproj
@@ -1,7 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="IdentityServer4" Version="3.0.2" />
+  </ItemGroup>
 
 </Project>
