--- a/src/API.Core/API.Core.Repository/API.Core.Repository.csproj
+++ b/src/API.Core/API.Core.Repository/API.Core.Repository.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="sqlSugarCore" Version="5.0.0.11" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\API.Core.IRepository\API.Core.IRepository.csproj" />
+  </ItemGroup>
+
 </Project>
