注册仓储层

--- a/src/API.Core/API.Core.Services/API.Core.Services.csproj
+++ b/src/API.Core/API.Core.Services/API.Core.Services.csproj
@@ -1,12 +1,18 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <OutputPath>..\API.Core\bin\Debug</OutputPath>
+  </PropertyGroup>
+
   <ItemGroup>
+    <ProjectReference Include="..\API.Core.Common\API.Core.Common.csproj" />
+    <ProjectReference Include="..\API.Core.IRepository\API.Core.IRepository.csproj" />
     <ProjectReference Include="..\API.Core.IServices\API.Core.IServices.csproj" />
-    <ProjectReference Include="..\API.Core.Repository\API.Core.Repository.csproj" />
+    <ProjectReference Include="..\API.Core.Model\API.Core.Model.csproj" />
   </ItemGroup>
 
 </Project>
